--- a/configs/config.properties
+++ b/configs/config.properties
@@ -10,3 +10,5 @@
  url.homepage = https://dsportalapp.herokuapp.com/home
  url.registerpage = https://dsportalapp.herokuapp.com/register
  url.loginpage = https://dsportalapp.herokuapp.com/login
+ url.practicequespage = https://dsportalapp.herokuapp.com/data-structures-introduction/practice
+ 
